--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 <div id="celsius">
-    <input type="number" name="" id="" placeholder="celsius...">
+    <input type="number" placeholder="celsius...">
 </div>
 <div id="fahrenheit">
-    <input type="number" name="" id="" placeholder="fahrenheit...">
+    <input type="number" placeholder="fahrenheit...">
 </div>
 <div id="kelvin">
-    <input type="number" name="" id="" placeholder="kelvin...">
+    <input type="number" placeholder="kelvin...">
 </div>
     
     
